Starting functionality for unique check before save

--- a/squadbuilder/templates/squadbuilder/squadviewer.html
+++ b/squadbuilder/templates/squadbuilder/squadviewer.html
@@ -2,8 +2,8 @@
 
 
 {% block content %}
-	{{squadcode}}
-	{{squadname}}
+	<h4>Your Squad '{{squadname}}' has been saved!</h4>
+	<h4> You can view your new squad <a href="/squad/{{squadid}}">Here</a>
 	
 
 {% endblock %}	
