Bug fix: Salvaged Astromechs not populating

--- a/squadbuilder/templates/squadbuilder/header.html
+++ b/squadbuilder/templates/squadbuilder/header.html
@@ -27,7 +27,7 @@
 					<img src="{% static 'img/Xwinglogo.png' %}" class="responsive-img" style='max-height:100px;' alt="face">
 				  </center>
 			  </div>
-		</div><hr>
+		</div>
 
 {% include "squadbuilder/navbar.html"%}
 
