Bug Fix: Upgrades that remove slots now work

--- a/squadbuilder/templates/squadbuilder/builder.html
+++ b/squadbuilder/templates/squadbuilder/builder.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 
+{{upgrade_bonus}}
 <script type='text/javascript'>
 var upgrades = {{ upgrades|safe }};
 var pilotCost = {{pilotCost|safe}};
